--- a/index.html
+++ b/index.html
@@ -481,6 +481,14 @@
           ></i>
           <span class="sr-only">Temp Mail</span>
         </a>
+        <a
+          target="_blank"
+          href="https://anydesk.com/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i class="fa-solid fa-diamond" aria-hidden="true" title="AnyDesk"></i>
+          <span class="sr-only">AnyDesk</span>
+        </a>
       </div>
     </main>
   </body>
