--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         </a>
         <a
           target="_blank"
-          href="https://jp.ba.lwd-temp.top/"
+          href="https://ba.lwd-temp.top/"
           rel="nofollow noopener noreferrer"
         >
           <i
