--- a/index.html
+++ b/index.html
@@ -211,13 +211,26 @@
     <main id="main">
       <div class="intro" id="intro-confetti">Hello, I'm Sunset!</div>
       <div class="tagline">
-        Amateur independent developer | Windows & Linux user | Gamer
+        Amateur independent developer, Windows & Linux user, Gamer.
       </div>
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <div class="icons-social">
         <a
           target="_blank"
-          href="https://jekyll.lwd-temp.top/"
+          href="https://sunmkt.top/"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i
+            class="fa-solid fa-house"
+            aria-hidden="true"
+            title="Modern Landing Page"
+          ></i>
+          <span class="sr-only">Modern Landing Page</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://blog.sunmkt.top/"
           rel="nofollow noopener noreferrer me"
           itemprop="sameAs"
         >
@@ -226,77 +239,29 @@
         </a>
         <a
           target="_blank"
-          href="https://github.com/lwd-temp"
+          href="https://github.com/SunsetMkt"
           rel="nofollow noopener noreferrer me"
           itemprop="sameAs"
         >
           <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
           <span class="sr-only">GitHub</span>
         </a>
-        <!--
         <a
           target="_blank"
-          href="https://gitlab.com/lwd-temp"
-          rel="nofollow noopener noreferrer me"
-          itemprop="sameAs"
-        >
-          <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
-          <span class="sr-only">GitLab</span>
-        </a>
-        -->
-        <a
-          target="_blank"
-          href="https://twitter.com"
-          rel="nofollow noopener noreferrer me"
-          itemprop="sameAs"
-          id="twitter"
-          style="display: none"
-        >
-          <i
-            class="fa-brands fa-twitter"
-            aria-hidden="true"
-            title="Twitter"
-          ></i>
-          <span class="sr-only">Twitter</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a"
-          rel="nofollow noopener noreferrer me"
-          itemprop="sameAs"
-        >
-          <i
-            class="fa-solid fa-key"
-            aria-hidden="true"
-            title="PGP Public Key"
-          ></i>
-          <span class="sr-only">PGP Public Key</span>
-        </a>
-        <a
-          target="_blank"
-          href="mailto:i@lwd-temp.top"
-          rel="nofollow noopener noreferrer me"
-          itemprop="sameAs"
-        >
-          <i class="fa-solid fa-envelope" aria-hidden="true" title="Email"></i>
-          <span class="sr-only">Email</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://contact.lwd-temp.top/"
+          href="https://contact.sunmkt.top/"
           rel="nofollow noopener noreferrer me"
           itemprop="sameAs"
         >
           <i
             class="fa-solid fa-inbox"
             aria-hidden="true"
-            title="Quick Contact Me Form"
+            title="Contact Me Form"
           ></i>
-          <span class="sr-only">Quick Contact Me Form</span>
+          <span class="sr-only">Contact Me Form</span>
         </a>
         <a
           target="_blank"
-          href="https://status.lwd-temp.top/"
+          href="https://status.sunmkt.top/"
           rel="nofollow noopener noreferrer me"
           itemprop="sameAs"
         >
@@ -306,188 +271,6 @@
             title="Service Status"
           ></i>
           <span class="sr-only">Service Status</span>
-        </a>
-      </div>
-      <div class="tagline">Friends & Useful Links</div>
-      <div class="icons-social">
-        <a
-          target="_blank"
-          href="https://massgrave.dev/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-brands fa-windows"
-            aria-hidden="true"
-            title="Microsoft Installation & Activation"
-          ></i>
-          <span class="sr-only">Microsoft Installation & Activation</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://hmcl.huangyuhui.net/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-solid fa-cube"
-            aria-hidden="true"
-            title="HMCL Launcher"
-          ></i>
-          <span class="sr-only">HMCL Launcher</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://cyberchef.lwd-temp.top/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-regular fa-chess-rook"
-            aria-hidden="true"
-            title="CyberChef"
-          ></i>
-          <span class="sr-only">CyberChef</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://www.zaobao.com/"
-          rel="nofollow noopener noreferrer"
-        >
-          <!--No AD and paywall on .com site.-->
-          <i
-            class="fa-solid fa-newspaper"
-            aria-hidden="true"
-            title="Nanyang Sin-Chew Lianhe Zaobao"
-          ></i>
-          <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://www.kaspersky.com/downloads/free-antivirus?ignoreredirects=true"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-solid fa-k"
-            aria-hidden="true"
-            title="Kaspersky Free Antivirus"
-          ></i>
-          <span class="sr-only">Kaspersky Free Antivirus</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://steamdb.info/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
-          <span class="sr-only">SteamDB</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://developers.cloudflare.com/cloudflare-one/connections/connect-devices/warp/download-warp/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-brands fa-cloudflare"
-            aria-hidden="true"
-            title="Cloudflare Zero Trust WARP"
-          ></i>
-          <span class="sr-only">Cloudflare Zero Trust WARP</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://ba.lwd-temp.top/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-regular fa-circle"
-            aria-hidden="true"
-            title="Blue Archive Spine Viewer"
-          ></i>
-          <span class="sr-only">Blue Archive Spine Viewer</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://www.msdmanuals.com/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-solid fa-book-medical"
-            aria-hidden="true"
-            title="The MSD Manuals"
-          ></i>
-          <span class="sr-only">The MSD Manuals</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://www.xzc-meina.top/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i class="fa-solid fa-user" aria-hidden="true" title="Mori Meina"></i>
-          <span class="sr-only">Mori Meina</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://code.visualstudio.com/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-regular fa-file-code"
-            aria-hidden="true"
-            title="Visual Studio Code"
-          ></i>
-          <span class="sr-only">Visual Studio Code</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://codeium.com/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i class="fa-solid fa-code" aria-hidden="true" title="Codeium"></i>
-          <span class="sr-only">Codeium</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://www.gnu.org/home.en.html"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-solid fa-cow"
-            aria-hidden="true"
-            title="The GNU Operating System and the Free Software Movement"
-          ></i>
-          <span class="sr-only"
-            >The GNU Operating System and the Free Software Movement</span
-          >
-        </a>
-        <a
-          target="_blank"
-          href="https://duckduckgo.com/?kae=-1&kp=-2&kn=1&k1=-1&kax=-1&kak=-1&kap=-1&kaq=-1&kao=-1&kau=-1&kc=-1&kg=p&k18=1"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-solid fa-magnifying-glass"
-            aria-hidden="true"
-            title="DuckDuckGo"
-          ></i>
-          <span class="sr-only">DuckDuckGo</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://mail.960923.xyz/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i
-            class="fa-solid fa-envelope"
-            aria-hidden="true"
-            title="Temp Mail"
-          ></i>
-          <span class="sr-only">Temp Mail</span>
-        </a>
-        <a
-          target="_blank"
-          href="https://anydesk.com/"
-          rel="nofollow noopener noreferrer"
-        >
-          <i class="fa-solid fa-diamond" aria-hidden="true" title="AnyDesk"></i>
-          <span class="sr-only">AnyDesk</span>
         </a>
       </div>
     </main>
@@ -506,27 +289,6 @@
     }
   </script>
 
-  <script>
-    // Twitter handler
-    if (
-      navigator.language === "zh-CN" ||
-      navigator.languages.includes("zh-CN") ||
-      Intl.DateTimeFormat().resolvedOptions().timeZone === "Asia/Shanghai"
-    ) {
-    } else {
-      const xhr = new XMLHttpRequest();
-      xhr.open("GET", "https://security.lwd-temp.top/api/v1.09/twitter");
-      xhr.send();
-      xhr.onreadystatechange = () => {
-        if (xhr.readyState === 4 && xhr.status === 200) {
-          const data = JSON.parse(xhr.responseText);
-          const twitter = document.getElementById("twitter");
-          twitter.href = `${data.url}`;
-          twitter.removeAttribute("style");
-        }
-      };
-    }
-  </script>
   <script>
     // https://confettijs.org/
     var Confetti = (function () {
@@ -756,20 +518,6 @@
     confetti.setPower(25);
     confetti.setFade(false);
     confetti.destroyTarget(false);
-    /**
-    var clickCount = 0;
-    document.getElementById("intro-confetti").onclick = function () {
-      clickCount++;
-      if (clickCount == 50) {
-        let confetti2 = new Confetti("main");
-        confetti2.setCount(75);
-        confetti2.setSize(1);
-        confetti2.setPower(25);
-        confetti2.setFade(false);
-        confetti2.destroyTarget(false);
-      }
-    };
-    */
   </script>
   <script>
     const timeDiv = document.getElementById("time");
@@ -797,44 +545,4 @@
     // 每毫秒更新一次时间
     // requestAnimationFrame(updateTime);
   </script>
-  <!--Start of Tawk.to Script-->
-  <!--
-  <script type="text/javascript">
-    (function () {
-      // https://help.tawk.to/article/change-the-widget-based-on-the-visitors-language
-      function getChatId() {
-        // function to retrieve the property/widget chat id;
-        // substitute 000000000001 to property id
-        var lang = navigator.language || navigator.userLanguage;
-
-        // return the default language if the lang variable is empty
-        if (!lang) {
-          return "663ae0659a809f19fb2e7f5a/1htc4169r";
-        }
-
-        if (lang.match("en")) {
-          return "663ae0659a809f19fb2e7f5a/1htc4169r";
-        } else {
-          return "663ae0659a809f19fb2e7f5a/1htc4169r";
-        }
-      }
-
-      var chatId = getChatId();
-      if (!chatId) {
-        return;
-      }
-      var Tawk_API = Tawk_API || {},
-        Tawk_LoadStart = new Date();
-
-      var s1 = document.createElement("script"),
-        s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = "https://embed.tawk.to/" + chatId;
-      s1.charset = "UTF-8";
-      s1.setAttribute("crossorigin", "*");
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-  -->
-  <!--End of Tawk.to Script-->
 </html>
